--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -1095,7 +1095,7 @@ body {
                 }
 
                 &[type=submit] {
-                  border: none;
+                  border: 2px solid $brandPrimary;
                   @include border-radius(25px);
                   height: 50px;
                   padding: 0 63px 0 25px;
@@ -1124,10 +1124,15 @@ body {
 
                 &[type=submit] {
                   padding: 0;
+
+                  &:hover {
+
+                  }
                 }
               }
             }
           }
+
           .btn-wrapper {
             margin:0 auto;
             width: 260px;
@@ -1150,8 +1155,8 @@ body {
                   right:0;
                   content: '';
                   display: block;
-                  width:20px;
-                  height:20px;
+                  width:25px;
+                  height:17px;
                   overflow: hidden;
                   background: transparent url("#{$pathToImages}/list-icon.png");
                   background-position: 0 0;
@@ -1167,6 +1172,7 @@ body {
                   &:after {
                     background: transparent url("#{$pathToImages}/list-icon-over.png");
                     background-size: 25px 17px;
+                    background-repeat: no-repeat;
                   }
                 }
               }
